Korrigiere Konstruktor BST

--- a/docs/240604/240604_bst_anwendung.ipynb
+++ b/docs/240604/240604_bst_anwendung.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -34,9 +20,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "m7WLfHwiQP8O"
+      },
+      "outputs": [],
       "source": [
         "class BST:\n",
-        "    def __init__(self, birthday, name, given_name, value = None):\n",
+        "    def __init__(self, key, value = None):\n",
         "        if key == None:\n",
         "            self.root = None\n",
         "        else:\n",
@@ -155,30 +146,30 @@
         "        while current.left is not None:\n",
         "            current = current.left\n",
         "        return current"
-      ],
-      "metadata": {
-        "id": "m7WLfHwiQP8O"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "2BA5ieTlUd1R"
+      },
+      "outputs": [],
       "source": [
         "class Student:\n",
         "    def __init__(self, birthday, name, given_name):\n",
         "        self.birthday   = birthday\n",
         "        self.name       = name\n",
         "        self.given_name = given_name"
-      ],
-      "metadata": {
-        "id": "2BA5ieTlUd1R"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "sn78f8-rWjtc"
+      },
+      "outputs": [],
       "source": [
         "given_names = [\"Riccardo\",\"Kisha\",\"Nadja\",\"Licia\",\"Emil\",\"Emilia\",\"Till\",\"Muriel\",\n",
         "         \"Sophia\",\"Moritz\",\"Flynn\",\"Angelos\",\"Erika\",\"Leon\",\"Lian\",\"Robin\",\n",
@@ -188,12 +179,21 @@
         "]\n",
         "\n",
         "birthdays =[12062008,25072009,10072008,20052008,21012009,8022008,18112008,9042009,18112007,4112008,31082007,15062008,11102008,17102008,27092008,17012009,3042008,9052008,16092007,5052008,27012009,8022009,9062009,25092008]"
-      ],
-      "metadata": {
-        "id": "sn78f8-rWjtc"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
