Korrigiere Fehler in der Insert Methode
Perplexity hat geholfen...

--- a/docs/240604/240604_bst_anwendung.ipynb
+++ b/docs/240604/240604_bst_anwendung.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "2AV04xy5P5AZ"
       },
@@ -29,21 +29,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "m7WLfHwiQP8O"
       },
       "outputs": [],
       "source": [
         "class BST:\n",
-        "    def __init__(self, key, value = None):\n",
+        "    def __init__(self, key= None, value = None):\n",
         "        if key == None:\n",
         "            self.root = None\n",
         "        else:\n",
         "            self.root = Node(key, value)\n",
         "\n",
-        "    def insert(self, key, value = None):\n",
-        "        node = Node(key)\n",
+        "    def insert(self, key, value=None):\n",
+        "        node = Node(key, value)\n",
         "\n",
         "        if self.root is None:\n",
         "            self.root = node\n",
@@ -51,29 +51,21 @@
         "\n",
         "        ref = self.root\n",
         "\n",
-        "        if node.key <= ref.key and ref.left is None:\n",
-        "            ref.left = node\n",
-        "            node.parent = ref\n",
-        "            return\n",
-        "\n",
-        "        elif node.key <= ref.key:\n",
-        "            while ref.left:\n",
-        "                ref = ref.left\n",
-        "            ref.left = node\n",
-        "            node.parent = ref\n",
-        "            return\n",
-        "\n",
-        "        elif node.key > ref.key and ref.right is None:\n",
-        "            ref.right = node\n",
-        "            node.parent = ref\n",
-        "            return\n",
-        "\n",
-        "        else:\n",
-        "            while ref.right:\n",
-        "                ref = ref.right\n",
-        "            ref.right = node\n",
-        "            node.parent = ref.right\n",
-        "            return\n",
+        "        while True:\n",
+        "            if node.key <= ref.key:\n",
+        "                if ref.left is None:\n",
+        "                    ref.left = node\n",
+        "                    node.parent = ref\n",
+        "                    return\n",
+        "                else:\n",
+        "                    ref = ref.left\n",
+        "            else:\n",
+        "                if ref.right is None:\n",
+        "                    ref.right = node\n",
+        "                    node.parent = ref\n",
+        "                    return\n",
+        "                else:\n",
+        "                    ref = ref.right\n",
         "\n",
         "    def search(self, key, ref=None):\n",
         "\n",
@@ -159,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 36,
       "metadata": {
         "id": "2BA5ieTlUd1R"
       },
@@ -169,12 +161,17 @@
         "    def __init__(self, birthday, name, given_name):\n",
         "        self.birthday   = birthday\n",
         "        self.name       = name\n",
-        "        self.given_name = given_name"
+        "        self.given_name = given_name\n",
+        "        \n",
+        "    def insert_into_bst(self, bst):\n",
+        "        bst.insert(self.birthday, self)\n",
+        "\n",
+        "    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {
         "id": "sn78f8-rWjtc"
       },
@@ -189,6 +186,65 @@
         "\n",
         "birthdays =[12062008,25072009,10072008,20052008,21012009,8022008,18112008,9042009,18112007,4112008,31082007,15062008,11102008,17102008,27092008,17012009,3042008,9052008,16092007,5052008,27012009,8022009,9062009,25092008]"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "baum = BST()\n",
+        "student = Student(12062008, \"Ambühl\", \"Riccardo\")\n",
+        "#baum.insert(student.birthday, student)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for i in range(len(birthdays)):\n",
+        "    studenta = Student(birthdays[i],\n",
+        "                      names[i],\n",
+        "                      given_names[i])\n",
+        "    baum.insert(birthdays[i], studenta)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Wackerl\n"
+          ]
+        }
+      ],
+      "source": [
+        "result = baum.search(birthdays[-5])\n",
+        "print(result.value.name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Wyler\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(studenta.name)"
+      ]
     }
   ],
   "metadata": {
@@ -200,7 +256,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
