Starte In-order implementierung

--- a/docs/240604/traversal.ipynb
+++ b/docs/240604/traversal.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,30 +22,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In-Order Tree Traversal\n",
+    "\n",
+    "Hier das Listing in Pseudocode:\n",
+    "\n",
+    "```Pseudocode\n",
+    "procedure inorder(node)\n",
+    "    if node = null\n",
+    "        return\n",
+    "    inorder(node.left)\n",
+    "    visit(node)\n",
+    "    inorder(node.right)\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def in_order_traversal(tree, node=None, result=None):\n",
-    "    if result is None:\n",
-    "        result = []\n",
-    "    \n",
-    "    if tree.root is None:\n",
-    "        return result\n",
-    "    \n",
+    "def inorder(node):\n",
+    "    result = []\n",
     "    if node is None:\n",
-    "        node = tree.root\n",
-    "\n",
-    "    if node.left:\n",
-    "        in_order_traversal(tree, node.left, result)\n",
-    "    \n",
+    "        return result\n",
+    "    inorder(node.left)\n",
     "    result.append(node.key)\n",
-    "    \n",
-    "    if node.right:\n",
-    "        in_order_traversal(tree, node.right, result)\n",
-    "    \n",
+    "    inorder(node.right)\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = inorder(baum.root)\n",
+    "print(result)"
    ]
   },
   {
