Stelle das Arbeitsblatt zur Repetition fertig

--- a/docs/240618/repetitionen.ipynb
+++ b/docs/240618/repetitionen.ipynb
@@ -65,10 +65,38 @@
    "source": [
     "## Funktionen in Python\n",
     "\n",
-    "Implementieren Sie die folgenden geometrischen Formeln als\n",
+    "Ausgehend von der folgenden Zeichnung Implementieren Sie im folgenden geometrischen Formeln als\n",
     "Python-Funktionen.\n",
     "\n",
-    "1. "
+    "![Dreiecksskizze](./images/triangle.svg)\n",
+    "\n",
+    "| Variabel | Beschreibung |\n",
+    "| :--- | :--- |\n",
+    "| $s$ | halber Umfang ($(a+b+c)/2$) |\n",
+    "| $I$ | Mittelpunkt des Inkreises |\n",
+    "| $\\varrho$ | Radius des Inkreises |\n",
+    "| $I_a$ | Mittelpunkt des Ankreises |\n",
+    "| $\\varrho_a$ | Radius des Ankreises |\n",
+    "| $w_{\\alpha}$ | Winkelhalbierende des Winkels $\\alpha$ |\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. Flächeninhalt (Heron):  \n",
+    "   $A = \\sqrt{s(s-a)(s-b)(s-c)}$\n",
+    "\n",
+    "2. Umkreisradius:  \n",
+    "   $r = \\frac{abc}{4A}$\n",
+    "\n",
+    "3. Inkreisradius:  \n",
+    "   $\\varrho = \\frac{A}{s}$\n",
+    "\n",
+    "4. Ankreisradius:  \n",
+    "   $\\varrho_a = \\frac{A}{s-a}\n",
+    "\n",
+    "5. Berechnung der Höhen:  \n",
+    "   * $h_a = \\frac{2A}{a}$\n",
+    "   * $h_b = \\frac{2A}{b}$\n",
+    "   * $h_c = \\frac{2A}{c}$"
    ]
   },
   {
@@ -76,7 +104,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Flächeninhalt (Heron): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Umkreisradius:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inkreisradius:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ankreisradius:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Berechnung der Höhen:"
+   ]
   }
  ],
  "metadata": {
