--- a/docs/240618/images/triangle.tex
+++ b/docs/240618/images/triangle.tex
@@ -2,7 +2,10 @@
 \usepackage{tkz-euclide}
 
 \usepackage{tikz}
-\usetikzlibrary{calc}
+\usetikzlibrary{calc,
+                intersections,
+                arrows.meta
+                }
 
 \begin{document}
 
@@ -28,9 +31,7 @@
     \pgfmathsetmacro{\rho}{\A / \s}
     % Ankreisradius
     \pgfmathsetmacro{\rhoa}{\A / (\s - \a)}
-    % Alpha halbe
     
-
     % Zeichne den Inkreis
     \coordinate [label=above:$I$] (I) at (\s-\a,\rho);
     \draw (I) circle (0.2mm);
@@ -42,8 +43,30 @@
     \draw (Ia) circle (\rhoa);
 
     % Zeichne Winkelhalbierende alpha
-    %\draw (0,0) -- ()
+    \draw[add= 0 and 0.5, densely dash dot] (A) to node[at end, above]
+    {$w_{\alpha}$} (Ia);
+    % Zeichne Basislinie
+    \draw (A) to (7,0);
+    % Zeichne Linie entlang der Seite b
+    \draw[add= 0 and 1] (A) to (C);
 
+    % Zeichne die Hilfslinie für s-Bruchteile
+    \draw[|<->|] (0,-.75) -- node[below] {$s-a$} (\s-\a,-.75);
+    \draw[|<->|] (\s-\a,-.75) -- node[below] {$s-b$}
+    (5,-.75);
+    \draw[|<->|] (5,-.75) -- node[below] {$s-c$} (3*\s-\c-\b-\a,-.75);
+
+    % Zeichnen der Linien zu den Fusspunkten
+    \coordinate (Fi)  at (\s-\a, 0);
+    \coordinate (Fia) at (3*\s-\c-\b-\a, 0);
+    \draw[dashed, thin] (I) -- node[right] {$\varrho$} (Fi);
+    \draw[dashed, thin] (Ia) -- node[right] {$\varrho_a$} (Fia);
+
+    \coordinate (Fiao) at ($(A)!(Ia)!(C)$);
+    \draw[dashed, thin] (Ia) -- (Fiao);
+
+    % Zeichne Hilfsline s
+    \draw[|<->|] ($(A)+(-5mm,5mm)$) -- node[above] {$s$} ($(Fiao)+(-5mm,5mm)$);
    
 \end{tikzpicture}
 
