Ergänze den Radius des Umkreises

--- a/docs/240618/repetitionen.ipynb
+++ b/docs/240618/repetitionen.ipynb
@@ -78,6 +78,7 @@
     "| $I_a$ | Mittelpunkt des Ankreises |\n",
     "| $\\varrho_a$ | Radius des Ankreises |\n",
     "| $w_{\\alpha}$ | Winkelhalbierende des Winkels $\\alpha$ |\n",
+    "| $r$ | Radius des Umkreises (in der Skizze nicht dargestellt) |\n",
     "\n",
     "\n",
     "\n",
