Setze die Links auf Google Colab

--- a/docs/240618/repetitionen.ipynb
+++ b/docs/240618/repetitionen.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/240618/repetitionen.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Repetitionen für die Prüfung vom 25. Juni 24\n",
     "\n",
     "In diesem Dokument werden Repetitionsaufgaben für die kommende Prüfung\n",
