Korrigiere einen Tipfehler

--- a/docs/240618/repetitionen.ipynb
+++ b/docs/240618/repetitionen.ipynb
@@ -101,7 +101,7 @@
     "   $\\varrho = \\frac{A}{s}$\n",
     "\n",
     "4. Ankreisradius:  \n",
-    "   $\\varrho_a = \\frac{A}{s-a}\n",
+    "   $\\varrho_a = \\frac{A}{s-a}$\n",
     "\n",
     "5. Berechnung der Höhen:  \n",
     "   * $h_a = \\frac{2A}{a}$\n",
