Stand nach der Lektion vom 18. Juni 24

--- a/docs/240618/repetitionen.ipynb
+++ b/docs/240618/repetitionen.ipynb
@@ -111,38 +111,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Flächeninhalt (Heron): "
+    "# Flächeninhalt (Heron): \n",
+    "def heron(a: float, b: float, c: float) -> float:\n",
+    "    s = (a+b+c)/2\n",
+    "\n",
+    "    area = (s*(s-a)*(s-b)*(s-c))**(1/2)\n",
+    "\n",
+    "    return area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Umkreisradius:"
+    "print(heron(3,4,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inkreisradius:"
+    "# Umkreisradius:\n",
+    "def umkreis(a,b,c):\n",
+    "    area = heron(a,b,c)\n",
+    "    r = (a*b*c)/(4*area)\n",
+    "    return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(umkreis(3,4,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ankreisradius:"
+    "# Inkreisradius:\n",
+    "def inkreis(a,b,c):\n",
+    "    area = heron(a,b,c)\n",
+    "    s = (a+b+c)/2\n",
+    "    rho = area/s\n",
+    "    return rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ankreisradius:\n",
+    "def ankreis(a,b,c):\n",
+    "    area=heron(a,b,c)\n",
+    "    s = (a+b+c)/2\n",
+    "    rhoa = area/(s-a)\n",
+    "    rhob = area/(s-b)\n",
+    "    rhoc = area/(s-c)\n",
+    "    result = [rhoa, rhob, rhoc]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.0, 3.0, 6.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ankreis(3,4,5))"
    ]
   },
   {
@@ -171,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
