Füge Link zu den Farbnamen ein

--- a/docs/240701/datenvisualisierung.ipynb
+++ b/docs/240701/datenvisualisierung.ipynb
@@ -190,7 +190,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Farben"
+    "#### Farben\n",
+    "\n",
+    "[Color Names](https://xkcd.com/color/rgb/)"
    ]
   },
   {
