Ergänze die Musterlösung

--- a/docs/240701/datenvisualisierung.ipynb
+++ b/docs/240701/datenvisualisierung.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +60,27 @@
       "1       8.091567e+09  5.372566e+09  \n",
       "2       8.615627e+09  5.541553e+09  \n",
       "3       1.129834e+10  6.127085e+09  \n",
-      "4       1.069757e+10  6.044093e+09  \n"
+      "4       1.069757e+10  6.044093e+09  \n",
+      "    Jahr  Bildung und Forschung  Finanzen und Steuern    Sicherheit  \\\n",
+      "33  2023           8.213808e+09          1.220824e+10  6.958976e+09   \n",
+      "34  2024           8.373807e+09          1.336128e+10  6.900133e+09   \n",
+      "35  2025           8.537085e+09          1.292331e+10  7.162389e+09   \n",
+      "36  2026           8.721586e+09          1.481348e+10  7.381050e+09   \n",
+      "37  2027           8.956911e+09          1.523271e+10  7.805771e+09   \n",
+      "\n",
+      "    Soziale Wohlfahrt       Verkehr  \n",
+      "33       2.716651e+10  1.061395e+10  \n",
+      "34       2.925376e+10  1.201569e+10  \n",
+      "35       2.982008e+10  1.087592e+10  \n",
+      "36       3.048443e+10  1.134575e+10  \n",
+      "37       3.155708e+10  1.137682e+10  \n"
      ]
     }
    ],
    "source": [
     "df_bundesfinanzen = pd.read_csv('./data/240627_bundesausgaben_timeline.csv')\n",
-    "print(df_bundesfinanzen.head())"
+    "print(df_bundesfinanzen.head())\n",
+    "print(df_bundesfinanzen.tail())"
    ]
   },
   {
