Füge Link zu den Daten ein

--- a/docs/240701/datenvisualisierung.ipynb
+++ b/docs/240701/datenvisualisierung.ipynb
@@ -36,7 +36,11 @@
     "## Import des Datensatzes\n",
     "\n",
     "Die folgenden Übungen basieren auf den Ausgaben des Bundes für den\n",
-    "Zeitraum von 1990 bis 2027."
+    "Zeitraum von 1990 bis 2027.\n",
+    "\n",
+    "Die Rohdaten können Sie\n",
+    "[hier](./data/240627_bundesausgaben_timeline.csv)\n",
+    "herunterladen."
    ]
   },
   {
