--- a/docs/240701/arbeitsblatt_datenvisualisierung.ipynb
+++ b/docs/240701/arbeitsblatt_datenvisualisierung.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/240701/arbeitsblatt_datenvisualisierung.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Datenvisualisierung in Python"
    ]
   },
