Füge eine begriffliche Präzisierung ein

--- a/docs/240826/listen.ipynb
+++ b/docs/240826/listen.ipynb
@@ -3,22 +3,41 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
+    "id": "p2UbN6ks1eoJ"
    },
    "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Jacques-Mock-Schindler/Studienleistung1/blob/master/docs/Musterloesung_Python-Listen.ipynb\">\n",
-    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "</a>"
+    "# Die Datenstruktur Python-Liste"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "p2UbN6ks1eoJ"
-   },
+   "metadata": {},
    "source": [
-    "# Aufgaben zur Vertiefung der Datenstruktur Python-Liste"
+    "Zu Beginn müssen ein paar Begrifflichkeiten geklärt werden. In der\n",
+    "Informatik wird generell zwischen den Datenstrukturen *Array* und\n",
+    "*Liste* unterschieden.  \n",
+    "Ein *Array* ist grundsätzlich eine Datenstruktur in welcher eine *fixe*\n",
+    "Anzahl Elemente des *gleichen Datentyps* abgespeichert werden. *Arrays*\n",
+    "werden in der Regel in einem zusammenhängenden Speicherbereich abgelegt.\n",
+    "In einem *Array* ist es möglich, auf jedes Element direkt zuzugreifen.    \n",
+    "*Listen* werden oft als *verkettete Listen* implementiert. In einer\n",
+    "solchen Datenstruktur kann eine *bliebige* Anzahl von Elementen des\n",
+    "*gleichen Datentyps*\n",
+    "abgespeichert werden. In einer *verketteten Liste* findet sich bei jedem\n",
+    "Element ein Verweis auf den Speicherplatz des nächsten Elements. Um in\n",
+    "einer *Liste* auf ein Element zuzugreifen, muss die Liste vom ersten bis\n",
+    "zum gesuchten Element durchlaufen werden.  \n",
+    "Der Zugriff auf die Daten in einem *Array* ist schneller als in einer\n",
+    "*verketteten Liste*, dafür ist das Einfügen neuer Elemente in einer\n",
+    "*verketteten Liste* einfacher als in einem (vollen) *Array*.\n",
+    "\n",
+    "In Pyhton ist eine Liste eine Datenstruktur, welche Eigenschaften der\n",
+    "beiden beschriebenen Datenstrukturen kombiniert. Die Genaue Bezeichnung\n",
+    "für Listen in Python müsste eigentlich *dynamisches Array* lauten. In\n",
+    "einer Python-Liste können *bliebig viele* Elemente *unterschiedlicher Datentypen*\n",
+    "abgespeichert werden. Trotzdem ist der direkte Zugriff auf jedes dieser\n",
+    "Elemente möglich. Diese Flexibilität verursacht allerdings einen\n",
+    "erheblichen zusätlichen Speicherbedarf für Python-Listen."
    ]
   },
   {
@@ -36,7 +55,7 @@
     "id": "aJuaMWIi1vcy"
    },
    "source": [
-    "Stellen Sie sich eine Familie mit Mutter, Vater, Heidi und Peter vor.\n",
+    "Stellen Sie sich eine Familie mit Mutter, Vater und den Kindern Heidi und Peter vor.\n",
     "Weisen Sie diese Konstellation der Pythonliste `family` zu. Zeigen Sie diese Python-Liste anschliessend mit `print(family)` an.\n"
    ]
   },
