Erstelle Übung zur neuzuweisung eines Elements

--- a/docs/240902/listenmanipulation.ipynb
+++ b/docs/240902/listenmanipulation.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Die Übungen auf dieser Seite basieren auf einem \n",
+    "[Tutorial von RealPython](https://realpython.com/python-list/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Mehrere Elemente aus einer Liste übernehmen: Slicing"
    ]
   },
@@ -37,11 +45,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Einer Liste ein neues Element an einer bestimmten Position zuweisen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['König', 'Königin', 'Schneewittchen']\n",
+      "['König', 'Stiefmutter', 'Schneewittchen']\n"
+     ]
+    }
+   ],
+   "source": [
+    "royal_famaily = ['König', 'Königin', 'Schneewittchen']\n",
+    "print(royal_famaily)\n",
+    "royal_famaily[1] = 'Stiefmutter'\n",
+    "print(royal_famaily)"
+   ]
   }
  ],
  "metadata": {
