Formuliere den Text zur Aufgabenstellung

--- a/docs/240902/listenmanipulation.ipynb
+++ b/docs/240902/listenmanipulation.ipynb
@@ -52,6 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gegeben sei die Familie von Schneewittchen als Python-Liste\n",
+    "`royal_family`. Weisen Sie dieser Familie an Stelle der Königin, die\n",
+    "Stiefmutter zu."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
