--- a/docs/240902/listenmanipulation.ipynb
+++ b/docs/240902/listenmanipulation.ipynb
@@ -80,6 +80,82 @@
     "royal_famaily[1] = 'Stiefmutter'\n",
     "print(royal_famaily)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['König', 'Königin', 'Schneewittchen']\n",
+      "['König', 'Stiefmutter', 'Schneewittchen']\n"
+     ]
+    }
+   ],
+   "source": [
+    "royal_famaily = ['König', 'Königin', 'Schneewittchen']\n",
+    "print(royal_famaily)\n",
+    "royal_famaily[1] = 'Stiefmutter'\n",
+    "print(royal_famaily)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die *slicing*-Syntax ermöglicht den Austausch ganzer Sequenzen in einer\n",
+    "Liste.\n",
+    "\n",
+    "Gegeben Sei die Liste der Kantone. Ziel ist es, die beiden Appenzell nur\n",
+    "mit ihren Abkürzungen aufzuführen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kantone = ['Zürich', 'Bern', 'Luzern', 'Uri', 'Schwyz', 'Obwalden', 'Nidwalden', 'Glarus', 'Zug', 'Freiburg', 'Solothurn', 'Basel-Stadt', 'Basel-Landschaft', 'Schaffhausen', 'Appenzell Ausserrhoden', 'Appenzell Innerrhoden', 'St. Gallen', 'Graubünden', 'Aargau', 'Thurgau', 'Tessin', 'Waadt', 'Wallis',' Neuenburg', 'Genf', 'Jura']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kantone.index('Appenzell Ausserrhoden'))\n",
+    "kantone[14:16] = ['AR', 'AI']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Zürich', 'Bern', 'Luzern', 'Uri', 'Schwyz', 'Obwalden', 'Nidwalden', 'Glarus', 'Zug', 'Freiburg', 'Solothurn', 'Basel-Stadt', 'Basel-Landschaft', 'Schaffhausen', 'AR', 'AI', 'St. Gallen', 'Graubünden', 'Aargau', 'Thurgau', 'Tessin', 'Waadt', 'Wallis', ' Neuenburg', 'Genf', 'Jura']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kantone)"
+   ]
   }
  ],
  "metadata": {
