Füge Aufgabe zu exend ein

--- a/docs/240902/listenmanipulation.ipynb
+++ b/docs/240902/listenmanipulation.ipynb
@@ -156,6 +156,38 @@
    "source": [
     "print(kantone)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nehmen wir an, dass die ehemaligen Unternanengebiete der drei Bünde als\n",
+    "neue Kantone zur Schweiz kommen. Dann kann die Liste mit `.extend()`\n",
+    "ergänzt werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Zürich', 'Bern', 'Luzern', 'Uri', 'Schwyz', 'Obwalden', 'Nidwalden', 'Glarus', 'Zug', 'Freiburg', 'Solothurn', 'Basel-Stadt', 'Basel-Landschaft', 'Schaffhausen', 'AR', 'AI', 'St. Gallen', 'Graubünden', 'Aargau', 'Thurgau', 'Tessin', 'Waadt', 'Wallis', ' Neuenburg', 'Genf', 'Jura', 'Cleven', 'Veltlin', 'Worms']\n"
+     ]
+    }
+   ],
+   "source": [
+    "kantone.extend(['Cleven', 'Veltlin', 'Worms'])\n",
+    "print(kantone)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
