--- a/docs/240826/listen.ipynb
+++ b/docs/240826/listen.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -38,18 +38,9 @@
     "id": "f_OBS27V1co-",
     "outputId": "595f0ce8-2d2c-4f07-d0d0-ebe193b570d9"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mutter', 'Vater', 'Heidi', 'Peter']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "family = ['Mutter', 'Vater', 'Heidi', 'Peter']\n",
-    "print(family)"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -78,18 +69,9 @@
     "id": "rQkPyBAM36Px",
     "outputId": "b9525ab6-1dc7-4bf6-8c19-58af43c9c130"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mutter', 'Vater', 'Heidi', 'Peter', 'Klara']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "family.append('Klara')\n",
-    "print(family)"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -110,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -118,17 +100,9 @@
     "id": "J4kjEADZSd6I",
     "outputId": "64a846d1-32c5-4950-91ce-a623ee75843a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Heidi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(family[2])"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -149,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -157,17 +131,9 @@
     "id": "8nAlJMHN4OkL",
     "outputId": "73816cb5-0ab8-457e-c7f1-869992ec17c4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Klara\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(family[-1])"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -189,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -197,20 +163,9 @@
     "id": "qDFS55nu45yH",
     "outputId": "3902b395-995e-4c42-eefd-6b577bb91e1e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Heidi', 'Peter', 'Klara']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parents = ['Vater', 'Mutter']\n",
-    "children = ['Heidi', 'Peter', 'Klara']\n",
-    "family = [parents, children]\n",
-    "print(family[1])"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -231,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -239,17 +194,9 @@
     "id": "gg040rQ3UFPx",
     "outputId": "078ea829-0ab3-4409-cea7-05c410f1349e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Klara\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(family[1][-1])"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -279,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -287,18 +234,9 @@
     "id": "F9PHdkj9UJBo",
     "outputId": "7532855c-8092-4e87-d7ca-965e01b569b5"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "odd_numbers = [i for i in range(1,10,2)]\n",
-    "print(odd_numbers)"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -312,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -320,18 +258,9 @@
     "id": "j0b3WKeCWqCL",
     "outputId": "6783f3dc-fe44-4b7f-d392-73986ca258f1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dreier_reihe = [i for i in range(3,31,3)]\n",
-    "print(dreier_reihe)"
+    "# Hier kommt Ihr Code"
    ]
   },
   {
@@ -347,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,18 +284,9 @@
     "id": "Go4gATW6XVWL",
     "outputId": "ea748ec5-5e45-4b3f-ca8a-6372c5f0c08c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "translation = [i for i in range(1,11)]\n",
-    "print(translation)"
+    "# Hier kommt Ihr Code"
    ]
   }
  ],
@@ -391,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
