--- a/docs/240826/listen.ipynb
+++ b/docs/240826/listen.ipynb
@@ -6,7 +6,7 @@
     "id": "p2UbN6ks1eoJ"
    },
    "source": [
-    "# Arbeiten mit Python-Liste"
+    "# Arbeiten mit Python-Listen"
    ]
   },
   {
