--- a/docs/240902/listenmanipulation.ipynb
+++ b/docs/240902/listenmanipulation.ipynb
@@ -76,29 +76,6 @@
    ],
    "source": [
     "royal_famaily = ['König', 'Königin', 'Schneewittchen']\n",
-    "print(royal_famaily)\n",
-    "royal_famaily[1] = 'Stiefmutter'\n",
-    "print(royal_famaily)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['König', 'Königin', 'Schneewittchen']\n",
-      "['König', 'Stiefmutter', 'Schneewittchen']\n"
-     ]
-    }
-   ],
-   "source": [
-    "royal_famaily = ['König', 'Königin', 'Schneewittchen']\n",
-    "print(royal_famaily)\n",
-    "royal_famaily[1] = 'Stiefmutter'\n",
     "print(royal_famaily)"
    ]
   },
@@ -120,24 +97,6 @@
    "outputs": [],
    "source": [
     "kantone = ['Zürich', 'Bern', 'Luzern', 'Uri', 'Schwyz', 'Obwalden', 'Nidwalden', 'Glarus', 'Zug', 'Freiburg', 'Solothurn', 'Basel-Stadt', 'Basel-Landschaft', 'Schaffhausen', 'Appenzell Ausserrhoden', 'Appenzell Innerrhoden', 'St. Gallen', 'Graubünden', 'Aargau', 'Thurgau', 'Tessin', 'Waadt', 'Wallis',' Neuenburg', 'Genf', 'Jura']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(kantone.index('Appenzell Ausserrhoden'))\n",
-    "kantone[14:16] = ['AR', 'AI']"
    ]
   },
   {
@@ -180,8 +139,7 @@
     }
    ],
    "source": [
-    "kantone.extend(['Cleven', 'Veltlin', 'Worms'])\n",
-    "print(kantone)"
+    "# hier Ihr Code"
    ]
   },
   {
