Erstelle Dictionary VIII Orte

--- a/docs/240909/dictionaries.ipynb
+++ b/docs/240909/dictionaries.ipynb
@@ -24,6 +24,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Informationnen zu den Beitrittsjahren können Sie dem [Wikipedia Eintrag zu den acht alten Orten](https://de.wikipedia.org/wiki/Acht_Alte_Orte) entnehmen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to literal here. Maybe you meant '==' instead of '='? (848748260.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    'Uri' = ur,\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to literal here. Maybe you meant '==' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Welche Datenstruktur (Liste oder Tupel) soll für die Einträge im Dictionary verwendet werden?\n",
+    "ur = (1291, 'Altdorf')\n",
+    "sz = (1291, 'Schwyz')\n",
+    "uw = (1291, 'Stans')\n",
+    "lu = (1332, 'Luzern')\n",
+    "zh = (1351, 'Zürich')\n",
+    "zg = (1352, 'Zug')\n",
+    "be = (1353, 'Bern')\n",
+    "gl = (1386, 'Glarus')\n",
+    "viii_orte = {\n",
+    "    'Uri' = ur,\n",
+    "    'Schwyz' = sz,\n",
+    "    'Unterwalden' = uw,\n",
+    "    'Luzern' = lu,\n",
+    "    'Zürich' = zh,\n",
+    "    'Zug' = zg,\n",
+    "    'Bern' = be,\n",
+    "    'Glarus' = gl,\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -106,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -124,5 +167,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
