Erstelle die XIII Orte

--- a/docs/240909/dictionaries.ipynb
+++ b/docs/240909/dictionaries.ipynb
@@ -32,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to literal here. Maybe you meant '==' instead of '='? (848748260.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    'Uri' = ur,\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to literal here. Maybe you meant '==' instead of '='?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Welche Datenstruktur (Liste oder Tupel) soll für die Einträge im Dictionary verwendet werden?\n",
     "ur = (1291, 'Altdorf')\n",
@@ -55,15 +46,89 @@
     "be = (1353, 'Bern')\n",
     "gl = (1386, 'Glarus')\n",
     "viii_orte = {\n",
-    "    'Uri' = ur,\n",
-    "    'Schwyz' = sz,\n",
-    "    'Unterwalden' = uw,\n",
-    "    'Luzern' = lu,\n",
-    "    'Zürich' = zh,\n",
-    "    'Zug' = zg,\n",
-    "    'Bern' = be,\n",
-    "    'Glarus' = gl,\n",
+    "    'Uri' : ur,\n",
+    "    'Schwyz' : sz,\n",
+    "    'Unterwalden' : uw,\n",
+    "    'Luzern' : lu,\n",
+    "    'Zürich' : zh,\n",
+    "    'Zug' : zg,\n",
+    "    'Bern' : be,\n",
+    "    'Glarus' : gl,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zwischen 1386 (Schlacht bei Sempach) und 1798 (Beginn der Helvetik) bestand die Eidgenossenschaft aus 13 Orten. Im folgenden soll ein eigener Python Dictionary mit den seit 1386 dazugekommenen zusätzlichen fünf Orten erstell werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fr = (1481, 'Fribourg')\n",
+    "so = (1481, 'Solothurn')\n",
+    "sh = (1501, 'Schaffhausen')\n",
+    "ba = (1501, 'Basel')\n",
+    "ap = (1513, 'Appenzell')\n",
+    "neue_orte = {\n",
+    "    'Fribourg' : fr,\n",
+    "    'Solothurn' : so,\n",
+    "    'Schaffhausen' : sh,\n",
+    "    'Basel' : ba,\n",
+    "    'Appenzell' : ap,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Zusammenführung der beiden Dictionaries zu einem Dictionary `xiii_orte` kann auf drei Arten erfolgen:\n",
+    "\n",
+    "* `xiii_orte = viii_orte | neue_orte`\n",
+    "* `xiii_orte = viii_orte.copy()`\n",
+    "\n",
+    "  `xiii_orte.update(neue_orte)`\n",
+    "* `xiii_orte = {**viii_orte, **neue_orte}`\n",
+    "\n",
+    "Die erste Variante ist dabei die spezifischste und daher die zu bevorziehende."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Uri': (1291, 'Altdorf'),\n",
+       " 'Schwyz': (1291, 'Schwyz'),\n",
+       " 'Unterwalden': (1291, 'Stans'),\n",
+       " 'Luzern': (1332, 'Luzern'),\n",
+       " 'Zürich': (1351, 'Zürich'),\n",
+       " 'Zug': (1352, 'Zug'),\n",
+       " 'Bern': (1353, 'Bern'),\n",
+       " 'Glarus': (1386, 'Glarus'),\n",
+       " 'Fribourg': (1481, 'Fribourg'),\n",
+       " 'Solothurn': (1481, 'Solothurn'),\n",
+       " 'Schaffhausen': (1501, 'Schaffhausen'),\n",
+       " 'Basel': (1501, 'Basel'),\n",
+       " 'Appenzell': (1513, 'Appenzell')}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xiii_orte = viii_orte | neue_orte"
    ]
   },
   {
