Beschreibe den Key - Value Zugriff

--- a/docs/240909/dictionaries.ipynb
+++ b/docs/240909/dictionaries.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,26 @@
     "    'Bern' : be,\n",
     "    'Glarus' : gl,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1352, 'Zug')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viii_orte['Zug']"
    ]
   },
   {
